# ros-webrtc

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  Vagrantfile  package.xml  params.yml  ros_webrtc.launch  setup.py
msg/: Audio.msg  Data.msg  DataChannel.msg  IceCandidate.msg  IceServer.msg  MediaConstraints.msg  PeerConnection.msg  PeerConnectionKey.msg  Session.msg  SessionDescription.msg  SessionEvent.msg  SessionKey.msg  Source.msg  Stream.msg  Track.msg
scripts/: ros_webrtc_example  ros_webrtc_rosbridge  ros_webrtc_signaling
src/: config.cpp  config.h  device.cpp  device.h  device_manager.cpp  device_manager.h  host.cpp  host.h  main.cpp  media_constraints.cpp  media_constraints.h  media_type.cpp  media_type.h  renderer.cpp  renderer.h  session.cpp  session.h  util.cpp  util.h  video_capture.cpp  video_capture.h
src/cpp/: config.cpp  config.h  convert.cpp  convert.h  data_channel.cpp  data_channel.h  device_manager.cpp  device_manager.h  geocam_cfg.h  host.cpp  host.h  main.cpp  media_constraints.h  media_type.cpp  media_type.h  peer_connection.cpp  peer_connection.h  renderer.cpp  renderer.h  util.cpp  util.h  video_capture.cpp  video_capture.h
src/py/ros_webrtc/: __init__.py  application.py  peer_connection.py  signaling.py
srv/: AddIceCandidate.srv  BeginSession.srv  Connect.srv  ConnectSession.srv  CreateDataChannel.srv  CreatePeerConnection.srv  DeletePeerConnection.srv  Disconnect.srv  ExampleCallPeer.srv  ExampleGetCalls.srv  ExampleHangup.srv  GetHost.srv  GetPeerConnection.srv  GetSession.srv  IceCandidate.srv  OnDataChannel.srv  OnIceCandidate.srv  OnRemoveStream.srv  OnSetSessionDescription.srv  RotateVideoSource.srv  SdpOfferAnswer.srv  Send.srv  SendData.srv  SendSessionData.srv  Sessions.srv  SetIceServers.srv  SetRemoteDescription.srv  SetSessionDescription.srv
test/fixtures/params/: cameras.yaml  ice_servers.yaml  peer_connection.yaml
test/fixtures/site/: .gitignore  bower.json  gruntfile.js  package.json
test/fixtures/site/src/: demo.css  demo.js  index.html  ros_webrtc.js
test/integration/: .coveragerc  host-test.launch  host_test.py  peer-connection-test.launch  peer_connection_test.py  ros_coverage.py  session-test.launch  session_test.py  site-call-test.launch  site-wait-test.launch  site_test.py
test/params/: cameras.yaml
test/provision/: deb-dev.pub  dev.yml  requirements.yml  root_ssh_id_rsa_debs  travis.yml  vagrant.yml
test/provision/roles/: .gitignore
test/provision/roles/base/files/etc/profile.d/: bash_aliases.sh  bashrc.sh
test/provision/roles/base/tasks/: deps.yml  main.yml  network.yml  swap.yml  users.yml
test/provision/roles/ros-webrtc/defaults/: main.yml
test/provision/roles/ros-webrtc/files/etc/ros/rosdep/: ros_webrtc.yaml
test/provision/roles/ros-webrtc/files/etc/ros/rosdep/sources.list.d/: 30-ros_webrtc.list
test/provision/roles/ros-webrtc/tasks/: deps.yml  main.yml  test-site.yml  workspace.yml
test/provision/roles/webrtc/defaults/: main.yml
test/provision/roles/webrtc/tasks/: main.yml
test/scripts/: peer  signaling
test/unit/: main.cpp  test_media_constraints.cpp  test_media_type.cpp
